--- a/tutorial/queues/omnetpp.ini
+++ b/tutorial/queues/omnetpp.ini
@@ -1,8 +1,10 @@
 [General]
 random-seed = 1
 ini-warnings = no
-# The name below is optional, defauls is omnetpp.sca
+# The name below is optional, default is omnetpp.sca
 output-scalar-file = fifo.sca
+# The name below is optional, default is omnetpp.vec
+output-vector-file = fifo.vec
 
 [Cmdenv]
 runs-to-execute = 1
@@ -32,6 +34,8 @@ fifonet.num_buffers = 1
 fifonet.num_cells = 100
 fifonet.gen.ia_time = exponential(3)
 fifonet.fifo[0].num_init_jobs = 10;
+#fifonet.fifo[0].service_time = Erlang(100,200)
+#fifonet.fifo[0].service_time = deterministic(0.5)
 fifonet.fifo[0].service_time = exponential(2)
 #This line will only be relevant in case you have more than one queue
 fifonet.fifo[*].service_time = exponential(2)
