--- a/src/utils/opp_neddoc.in
+++ b/src/utils/opp_neddoc.in
@@ -57,7 +57,7 @@ if [ -n "$all_files" ]; then
     files=`find . -name '*.ned' -o -name '*.msg'` || exit 1
 else
     if [ $# -eq 0 ]; then
-        echo "opp_neddoc: no input files, try -a for all *.ned and *.msg files" >&2
+        echo "opp_neddoc: no input files specified, try -a for all *.ned and *.msg files" >&2
         exit 2
     fi
     files=$*
