--- a/src/utils/opp_neddoc.in
+++ b/src/utils/opp_neddoc.in
@@ -48,8 +48,9 @@ if [ -n "$do_help" ]; then
         echo "(Note: generating figures not possible -- ImageMagick's 'convert' is not present.)"
         echo ""
     fi
-    echo "Usage: opp_neddoc [-o <dir>] [-n] [-a] file1 file2 ..."
+    echo "Usage: opp_neddoc [-o <dir>] [-n] [-a] files-or-directories ..."
     echo " -a, --all    process all *.ned and *.msg files recursively"
+    echo "              ('opp_neddoc -a' is equivalent to 'opp_neddoc .')"
     echo " -o <dir>     output directory, defaults to ./html"
     echo " -t <filename>, --doxytagfile <filename>"
     echo "              turn on generating hyperlinks to Doxygen documentation;"
@@ -65,6 +66,8 @@ if [ -n "$do_help" ]; then
     echo " -x, --no-diagrams"
     echo "              do not generate usage and interitance diagrams"
     echo " -h, --help   displays this help text"
+    echo "Files specified as arguments are parsed and documented. If directories"
+    echo "are specified, all *.ned and *.msg files in them are documented."
     echo ""
     exit
 fi
@@ -81,15 +84,22 @@ if [ ! -d $outdir ]; then
 fi
 rm -f $outdir/* || exit 1
 
+echo collecting files...
 if [ -n "$all_files" ]; then
-    echo collecting files...
     files=`find . -name '*.ned' -o -name '*.msg'` || exit 1
 else
     if [ $# -eq 0 ]; then
-        echo "opp_neddoc: no input files specified, try -a for all *.ned and *.msg files" >&2
+        echo "opp_neddoc: no input files specified, try . to include all *.ned/*.msg files in current directory" >&2
         exit 2
     fi
-    files=$*
+    while [ $# -gt 0 ]; do
+        if [ -d "$1" ]; then
+            files="$files `find $1 -name '*.ned' -o -name '*.msg'`" || exit 1
+        else
+            files="$files $1"
+        fi
+        shift
+    done
 fi
 
 echo 'transforming to xml...'
