--- a/src/plove-old/Makefile.in
+++ b/src/plove-old/Makefile.in
@@ -39,12 +39,12 @@ plove: $(PLOVE_VARIANT)
 	@echo '' # NOP to prevent automatic rules from firing
 
 plove-sh:
-	echo "$(WISH) -f $(OMNETPP_PLOVE_DIR)/plove.sh $$*" > plove
+	echo "$(WISH) -f $(OMNETPP_PLOVE_DIR)/plove.sh "'$$*' > plove
 	chmod +x plove
 
 plove-cyg:
 	echo "@$(WISH) -f $(OMNETPP_PLOVE_DIR)/plove.sh %1 %2 %3 %4 %5 %6 %7 %8 %9" > plove.bat
-	echo "$(WISH) -f $(OMNETPP_PLOVE_DIR)/plove.sh $$*" > plove
+	echo "$(WISH) -f $(OMNETPP_PLOVE_DIR)/plove.sh "'$$*' > plove
 	chmod +x plove
 
 plove-exe: $(OBJS)
